# bevy_minibuffer_inspector

./: CHANGELOG  CHANGELOG.md  Cargo.toml  README.md
examples/: basic.rs
src/: asset_inspector.rs  filter_query_inspector.rs  inspector_plugins.rs  lib.rs  resource_inspector.rs  state_inspector.rs  utils.rs  world_inspector.rs
