[package]
name = "bevy_minibuffer_inspectors"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { version = "0.15.0" }
bevy_asset = { version = "0.15.0" }
bevy_ecs = { version = "0.15.0" }
bevy_reflect = { version = "0.15.0" }
bevy_log = { version = "0.15.0" }
bevy_state = { version = "0.15.0" }
bevy-inspector-egui = "0.28.0"
bevy_minibuffer = "0.2.0"
trie-rs = "0.4.2"
disqualified = "1.0.0"

[patch.crates-io]
bevy_minibuffer = { path = "../bevy_minibuffer" }

[dev-dependencies]
bevy = "0.15.0"
