[package]
name = "bevy_minibuffer_inspector"
description = "A minibuffer integration of bevy-inspector-egui"
version = "0.1.0"
edition = "2021"
authors = ["Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "bevy",
    "gamedev",
    "console",
]
categories = [
    "game-development"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shanecelis/bevy_minibuffer_inspector"

[dependencies]
bevy_app = { version = "0.15.0" }
bevy_asset = { version = "0.15.0" }
bevy_ecs = { version = "0.15.0" }
bevy_reflect = { version = "0.15.0" }
bevy_log = { version = "0.15.0" }
bevy_state = { version = "0.15.0" }
bevy-inspector-egui = "0.28.0"
bevy_minibuffer = "0.3.0"
trie-rs = "0.4.2"
disqualified = "1.0.0"
keyseq = { version = "0.5.0", features = ["bevy"] }

[dev-dependencies]
bevy = "0.15.0"
version-sync = "0.9.5"
